# po-fun-server

./: .gitignore  README.md  docker-compose.yaml  mypy.ini  pyproject.toml
.github/workflows/: main.yml
.vim/: coc-settings.json
app/: forms.py  tests.py  urls.py  views.py
app/static/app/: base.css  form_page.css
app/static/registration/: login.css
app/templates/app/: base.html  index.html
app/templates/registration/: login.html  register.html
core/: settings.py  urls.py
sample/: admin.py  analyzer.py  models.py  urls.py  validators.py  views.py
sample/forms/: SampleForm.py
sample/migrations/: 0001_initial.py  0002_auto_20210709_1608.py  0003_auto_20211014_1823.py  0004_alter_sample_file.py  0005_rename_file_sample_sample_file_and_more.py  0006_add_to_allowed_file_types.py  0007_tag.py  0008_alter_sample_options.py  0009_sample_created_at.py
sample/static/sample/: detail.css  samples.css
sample/templates/sample/: detail.html  index.html  samples.html  upload.html
sample/templates/sample/components/: sample-player.html
sample/tests/: mock_sample_file.py  test_models.py  test_validators.py  test_views.py
templates/: base.html
user/: urls.py  views.py
user/migrations/: 0001_initial.py
user/templates/user/: detail.html
vote/: direction.py  models.py  tests.py  urls.py  views.py
vote/migrations/: 0001_initial.py  0002_alter_vote_unique_together.py
