[tool.poetry]
name = "po-fun-server"
version = "0.1.0"
description = ""
authors = ["Anthony Suárez <neolight1010@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.2"
Django = "^4.1.0"
django-upload-validator = "^1.1.5"
django-clear-cache = "^0.3"
mutagen = "^1.45.1"
django-stubs-ext = "^0.7.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
coverage = "^6.3.2"
django-stubs = "1.13.0"
mypy = "^0.981"
black = "^22.6.0"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
