[tool.poetry]
name = "po-fun-server"
version = "0.1.0"
description = ""
authors = ["Anthony Suárez <neolight1010@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.2"
Django = "^4.1.0"
django-upload-validator = "^1.1.5"
django-clear-cache = "^0.3"
mutagen = "^1.45.1"
pydantic = "^1.10.2"
django-stubs-ext = "^0.8.0"
django-environ = "^0.10.0"
psycopg = "^3.1.8"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
coverage = "^6.3.2"
ipython = "^8.4.0"
django-stubs = "^1.16.0"
mypy = "~1.1.0"
rope = "^1.7.0"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = ["environ", "mutagen", "upload_validator"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "core.settings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
